Various changes to make version 0.6.0